# nua

./: .env.example  .gitignore  README.md  pyproject.toml
src/agent/: graph.py  state.py  subagent.py  supervisor.py
src/context/: __init__.py  compression.py  manager.py  memory.py
src/evaluation/: __init__.py  evaluators.py  metrics.py  verification.py
src/tools/: code_tools.py  file_tools.py  registry.py  web_tools.py
src/utils/: __init__.py  errors.py  logging.py
tests/: test_code_tools.py  test_context.py  test_context_compression_memory.py  test_evaluation.py  test_file_tools.py  test_graph.py  test_integration.py  test_registry.py  test_scenarios.py  test_state.py  test_subagent.py  test_supervisor.py  test_utils.py  test_web_tools.py
